<resources>
    <string name="app_name">Vulmix 3000</string>
        <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
        <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
        <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="detection">Detection</string>
    <string name="welcome">Welcome</string>
    <string name="vitlogo">Vitlogo</string>
    <string name="builfing">Builfing</string>
    <string name="building">Building</string>

</resources>