<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <Button
        android:id="@+id/videodetect"
        android:layout_width="193dp"
        android:layout_height="72dp"
        android:layout_marginBottom="284dp"
        android:text="@string/video"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/imagedetect"
        android:layout_width="185dp"
        android:layout_height="72dp"
        android:layout_marginTop="204dp"
        android:text="@string/image"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="427dp"
        android:layout_height="209dp"
        android:layout_marginTop="492dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/building"
        android:contentDescription="@string/building" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="236dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/vitlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vitap" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="168dp"
        android:fontFamily="sans-serif"
        android:text="@string/detection"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>